#91 - UMA 2 : add redirect_uri parameters to get_claims_gathering_url command
