# oxd-server/src/main/java/org/gluu/oxd/server/op/RpGetGetClaimsGatheringUrlOperation.java
@@ -27,16 +27,19 @@ public class RpGetGetClaimsGatheringUrlOperation extends BaseOperation<RpGetClai
 
     @Override
     public IOpResponse execute(RpGetClaimsGatheringUrlParams params) throws Exception {
-        validate(params);
+        final Rp rp = getRp();
+        validate(params, rp);
 
         final UmaMetadata metadata = getDiscoveryService().getUmaDiscoveryByOxdId(params.getOxdId());
-        final Rp rp = getRp();
+
         final String state = StringUtils.isNotBlank(params.getState()) ? getStateService().putState(Utils.encode(params.getState())) : getStateService().generateState();
+        String redirectUri = StringUtils.isNotBlank(params.getRedirectUri()) ? params.getRedirectUri() : rp.getRedirectUri();
 
         String url = metadata.getClaimsInteractionEndpoint() +
                 "?client_id=" + rp.getClientId() +
                 "&ticket=" + params.getTicket() +
                 "&claims_redirect_uri=" + params.getClaimsRedirectUri() +
+                "&redirect_uri=" + redirectUri +
                 "&state=" + state;
 
         final RpGetClaimsGatheringUrlResponse r = new RpGetClaimsGatheringUrlResponse();
@@ -45,12 +48,15 @@ public class RpGetGetClaimsGatheringUrlOperation extends BaseOperation<RpGetClai
         return r;
     }
 
-    private void validate(RpGetClaimsGatheringUrlParams params) {
+    private void validate(RpGetClaimsGatheringUrlParams params, Rp rp) {
         if (StringUtils.isBlank(params.getTicket())) {
             throw new HttpException(ErrorResponseCode.NO_UMA_TICKET_PARAMETER);
         }
         if (StringUtils.isBlank(params.getClaimsRedirectUri())) {
             throw new HttpException(ErrorResponseCode.NO_UMA_CLAIMS_REDIRECT_URI_PARAMETER);
+        }
+        if (!StringUtils.isBlank(params.getRedirectUri()) && !rp.getRedirectUris().contains(params.getRedirectUri())) {
+            throw new HttpException(ErrorResponseCode.INVALID_REDIRECT_URI);
         }
     }
 }
