# oxd-server/src/main/resources/swagger.yaml
@@ -271,7 +271,7 @@ paths:
                 description: list of spontaneous scopes (regexp against which validation is performed).
                 items:
                   type: string
-                  example: ["^transaction:.+$", "^\/user\/[^\/]+\/.+$"]
+                  example: ["^transaction:.+$", "^/user/[^/]+/.+$"]
 
       responses:
         200:
@@ -1556,6 +1556,9 @@ paths:
               claims_redirect_uri:
                 type: string
                 example: https://client.example.com/cb
+              redirect_uri:
+                type: string
+                example: https://client.example.com/cb/home
       responses:
         200:
           description: OK
